<artifactId>jaxws-ri</artifactId> <version>2.3.1</version>

--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,15 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
 	</properties>
 
-	<dependencies>
- 
+	<dependencies> 		<!-- https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-ri -->
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-ri</artifactId>
+			<version>2.3.1</version>
+			<type>pom</type>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -23,8 +27,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-
 	<build>
 		<plugins>
 			<plugin>
@@ -50,12 +52,12 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jaxws-maven-plugin</artifactId>
-				<version>2.5</version>
+
 				<configuration>
 					<wsdlUrls>http://localhost:8080/jaxws-soap-server-examples/hello?wsdl</wsdlUrls>
 					<packageName>de.hpc.soap.service</packageName>
 					<keep>true</keep>
-					
+
 				</configuration>
 				<executions>
 					<execution>
@@ -70,7 +72,8 @@
 		<finalName>wsdlclient</finalName>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -124,15 +127,6 @@
 		</pluginManagement>
 	</build>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.jvnet.staxex</groupId>
-				<artifactId>stax-ex</artifactId>
-				<version>1.2</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 	<groupId>eu.blky.helloworld</groupId>
 	<artifactId>jaxws-soap-client-examples</artifactId>
 </project>
