--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 			</plugin>
 		</plugins>
 
-		<finalName>wsdlclient</finalName>
+		<finalName>wsdlclient4jaxws-ri</finalName>
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
